# bscan

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.md  SECURITY.md  binding.gyp  composer.json  index.cpp  package.json
assets/: README.md
docs/: package.json
examples/: main.js
include/: WMIwrapper.h  bscan.config.h.in  bscan.h  config.h  platform.h
include/apheres/: apheres.h  scan_temperature.h
include/hwares/: README.md  hwares.h  scan_battery.h  scan_cpu.h  scan_cpuid.h  scan_disk.h  scan_fan.h  scan_gpu.h  scan_keyboard.h  scan_mainboard.h  scan_monitor.h  scan_net.h  scan_network.h  scan_ram.h
include/swares/: README.md  scan_bios.h  scan_browser.h  scan_datasource.h  scan_os.h  scan_system.h  swares.h
include/utils/: directory.h  string.h  stringutils.h  subprocess.h
pkgs/cargo/: README.md
pkgs/composer/: README.md
pkgs/cpan/: README.md
pkgs/cran/: README.md
pkgs/dotnet/: README.md
pkgs/gem/: README.md
pkgs/go/: README.md
pkgs/gradle/: README.md
pkgs/maven/: README.md
pkgs/npm/: README.md
pkgs/nuget/: README.md
pkgs/pip/: .gitignore  LICENSE  README.md  setup.py
pkgs/pip/bwc-bscan/: __init__.py
pkgs/pip/sample/: README.md  main.py
pkgs/spm/: README.md
src/libs/info/: CMakeLists.txt  bscan.cpp  scan_battery.cpp  scan_bios.cpp  scan_browser.cpp  scan_cpu.cpp  scan_datasource.cpp  scan_disk.cpp  scan_fan.cpp  scan_gpu.cpp  scan_keyboard.cpp  scan_mainboard.cpp  scan_net.cpp  scan_os.cpp  scan_ram.cpp  scan_system.cpp  scan_temperature.cpp
src/libs/info/apple/: scan_battery.cpp  scan_cpu.cpp  scan_disk.cpp  scan_gpu.cpp  scan_mainboard.cpp  scan_os.cpp  scan_ram.cpp
src/libs/info/linux/: scan_battery.cpp  scan_cpu.cpp  scan_disk.cpp  scan_gpu.cpp  scan_mainboard.cpp  scan_os.cpp  scan_ram.cpp
src/libs/info/windows/: scan_battery.cpp  scan_bios.cpp  scan_browser.cpp  scan_cpu.cpp  scan_datasource.cpp  scan_disk.cpp  scan_fan.cpp  scan_gpu.cpp  scan_keyboard.cpp  scan_mainboard.cpp  scan_monitor.cpp  scan_net.cpp  scan_network.cpp  scan_os.cpp  scan_ram.cpp  scan_temperature.cpp
